--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
 	<meta name="theme-color" content="#000000">
 	<!--
       manifest.json provides metadata used when your web app is added to the
